Move existing code to chemikaze-core